updated vignette for some tSNE
Former-commit-id: 296307ef94119e450a1b85f8cdf764d536dfb6b3 [formerly 782b73a040c81ec60c51910473b874dff1b37120] [formerly 6245dcfa8e60042cf5d9907ad6a8e58dbc86f3f9 [formerly f5aa3ca94d45944678ca1f22405284a83074ca98]] [formerly 297331f85355c2639a0cb83e786b960e8a56d1f1] [formerly 3d13d355e2f92157df0444e070e5c991fa8a3fdd [formerly 9df45245119d0082d9b1563e3c5e447e928e6c37]] [formerly 3b88e509d8e4e0e6c728a002d9027901a448052c [formerly b7acc26d040268dda0dc108cad38dd3f21b902d4] [formerly 05d9a46b950124a5313084f542959877e285680c [formerly ce350461d5c364c7687f3fa3a125cdd37e71744f]]] [formerly da690ae46ae62e4ed79527f148b47f79229f8ff4] [formerly cf62f0999b055109710f512aaac845740da22705 [formerly 050bd3374f9f7be5b1b730c7dc326f04dbc7ec36] [formerly d593f6f392a1ce379c2ddd285017667dc634624c [formerly c26e369fbfa71d92732d549ceefbfcec8e032f96]] [formerly 7cfa431922e01e556721caba14c2de7f2d3aed30] [formerly df4519bf5a123ee92f75bdcf4d2870e5f507c1dd [formerly d5db2620209a125a0026df3c5c7586c87ba2e26a]] [formerly 31a7ae0640963583fba1ffd1680bf55295c4dd40 [formerly 61daac3dc440a993a1d32e1c19f295a4716abe35] [formerly 071b19f4d579e9293ec5afad4f09f7bcf48aa0bb [formerly da690ae46ae62e4ed79527f148b47f79229f8ff4 [formerly 2fdebab079af937aeae35e8272ddf734875c12af]]]]] [formerly cf62f0999b055109710f512aaac845740da22705 [formerly 050bd3374f9f7be5b1b730c7dc326f04dbc7ec36] [formerly d593f6f392a1ce379c2ddd285017667dc634624c [formerly c26e369fbfa71d92732d549ceefbfcec8e032f96]] [formerly 7cfa431922e01e556721caba14c2de7f2d3aed30] [formerly df4519bf5a123ee92f75bdcf4d2870e5f507c1dd [formerly d5db2620209a125a0026df3c5c7586c87ba2e26a]] [formerly 31a7ae0640963583fba1ffd1680bf55295c4dd40 [formerly 61daac3dc440a993a1d32e1c19f295a4716abe35] [formerly 071b19f4d579e9293ec5afad4f09f7bcf48aa0bb [formerly da690ae46ae62e4ed79527f148b47f79229f8ff4 [formerly 2fdebab079af937aeae35e8272ddf734875c12af]]]] [formerly da690ae46ae62e4ed79527f148b47f79229f8ff4 [formerly 2fdebab079af937aeae35e8272ddf7

--- a/vignettes/restfulSE.Rmd
+++ b/vignettes/restfulSE.Rmd
@@ -42,6 +42,7 @@ an in-memory representation.
 suppressPackageStartupMessages({
 library(restfulSE)
 library(SummarizedExperiment)
+library(Rtsne)
 })
 ```{r dobanoyy}
 library(restfulSE)
@@ -71,9 +72,63 @@ through subsetting operations, and then extract the relevant
 assay data.  The data are retrieved from the remote server
 with the `assay` method.
 ```{r doba4}
-rbanoSub = rbano[5:8, 3:9] # currently only trivial subsets retrieved
-assay(rbanoSub) # general index processing under construction
+rbanoSub = rbano[5:8, c(3:9, 40:50)] 
+assay(rbanoSub) 
 ```
+
+# 10xGenomics example
+
+We have used Martin Morgan's TENxGenomics package
+to create a dense HDF5 representation of the 
+assay data, and placed it on the `bigec2` server.
+The metadata are available as `st100k` in this package;
+we have used EnsDb.Mmusculus.v79 to supply gene ranges
+where available; genes reported but without addresses
+are addressed at chr1:2 with width 0.  The rows
+are sorted by genomic address within chromosomes.
+
+```{r gettx}
+txdat = bigec2[["tenx_100k_sorted"]]
+data(st100k)
+tenx100k = RESTfulSummarizedExperiment( st100k, 
+   txdat )
+tenx100k
+```
+
+We will subset genes annotated to hippocampus development.
+Here are some related categories:
+
+```
+12092 GO:0021766                      hippocampus development
+12096 GO:0021770            parahippocampal gyrus development
+34609 GO:0097410      hippocampal interneuron differentiation
+34631 GO:0097432 hippocampal pyramidal neuron differentiation
+34656 GO:0097457                      hippocampal mossy fiber
+35169 GO:0098686       hippocampal mossy fiber to CA3 synapse
+42398 GO:1990026            hippocampal mossy fiber expansion
+```
+
+```{r anno}
+library(org.Mm.eg.db)
+atab = select(org.Mm.eg.db, keys="GO:0021766", keytype="GO", columns="ENSEMBL")
+hg = atab[,"ENSEMBL"]
+length(hgok <- intersect(hg, rownames(tenx100k)))
+```
+This is a very scattered collection of rows in the matrix.  We
+acquire expression measures for genes annotated to
+hippocampus on 4000 samples.  t-SNE is then used to project
+the log-transformed measures to the plane.
+```{r getdat, cache=TRUE}
+hipn = assay(tenx100k[hgok,1:4000])  # slow
+d = dist(t(log(1+hipn)), method="manhattan")
+proj = Rtsne(d)
+```
+```{r plt,fig=TRUE}
+plot(proj$Y)
+```
+
+
+
    
 
 # Background
@@ -101,7 +156,7 @@ on the remote server.
 Given the URL of a server running HDF5 server, we create
 an instance of `H5S_source`:
 ```{r doso}
-mys = H5S_source(serverURL="http://54.163.220.201:5000")
+mys = H5S_source(serverURL="http://54.174.163.77:5000")
 mys
 ```
 
@@ -117,7 +172,7 @@ groups(mys)
 
 There is a class to hold the link set for any group:
 ```{r lkhl}
-lin1 = links(mys,1)
+lin1 = restfulSE::links(mys,1)
 lin1
 ```
 
