add some text to vignette, preparing for tasic gene sets
Former-commit-id: 050f756d5c94be2e766f37e355c430a12d97549d [formerly ce5235617b5feaa866be9c5700be9357eda475cb [formerly 14b5452681338fa35ad00cf88f7ab1cdd9747b03]] [formerly aba2d40570591d68080092a06cb349aae709835c [formerly 23407d892c094c85eb0b0943b48c4f6df6b2e553] [formerly acf520f146fd33c8334f8278369d511972eeaa59 [formerly 3ca32efe3f9b68bb54eadadb3f8c43560f39c984]] [formerly aba2d40570591d68080092a06cb349aae709835c [formerly 23407d892c094c85eb0b0943b48c4f6df6b2e553] [formerly acf520f146fd33c8334f8278369d511972eeaa59 [formerly 3ca32efe3f9b68bb54eadadb3f8c43560f39c984]] [formerly ce5235617b5feaa866be9c5700be9357eda475cb [formerly 14b5452681338fa35ad00cf88f7ab1cdd9747b03] [formerly 3555b5bc8f243fe52ba60a13c2eaeca75eb0988d [formerly b9cc774209a87181aeb6482e761faeabe30a750a]]]]]
Former-commit-id: ef9a290a052e99ae3c75c849c9292a7b6b57d4d6 [formerly bc8d44f0a86e16b2487dce1020bcff3ba481002f] [formerly f57e1c570861401ac500b55881761956605e1f7b [formerly a16fcba2c6a6e227e057eebeebdfe53f1f134829]] [formerly ef9a290a052e99ae3c75c849c9292a7b6b57d4d6 [formerly bc8d44f0a86e16b2487dce1020bcff3ba481002f] [formerly f57e1c570861401ac500b55881761956605e1f7b [formerly a16fcba2c6a6e227e057eebeebdfe53f1f134829]] [formerly 1790dfc2a06d5177db32e2331a1fad04fdabfd7a [formerly 89d7a227b24a441ca481d7c6f240a0ad88c4131a] [formerly 3555b5bc8f243fe52ba60a13c2eaeca75eb0988d]]]
Former-commit-id: 1790dfc2a06d5177db32e2331a1fad04fdabfd7a [formerly 89d7a227b24a441ca481d7c6f240a0ad88c4131a]
Former-commit-id: 9dbe0eabc07ede7ec5fee1e881fb0ef82f99ded1 [formerly d4dd5c314f2e43b7c07f106009a717874f9ff7bb] [formerly 0a51ea63944c2e73dea051b6709f09cec047eb89 [formerly 8990f9eb2d2c2cf0b3cdc3597cbf576dc406764a]]
Former-commit-id: fd0d42af7edd5c2e7a07545ed89247aeddb4b60d [formerly e4eeefad415c34250ac0b48831aae18b449a340e]
Former-commit-id: b1c0d2f605cd44a4a68f38b03c58017d1299e828

--- a/vignettes/restfulSE.Rmd
+++ b/vignettes/restfulSE.Rmd
@@ -76,7 +76,9 @@ rbanoSub = rbano[5:8, c(3:9, 40:50)]
 assay(rbanoSub) 
 ```
 
-# 10xGenomics example
+# 10xGenomics examples
+
+## t-SNE for a set of genes annotated to hippocampus
 
 We have used Martin Morgan's TENxGenomics package
 to create a dense HDF5 representation of the 
@@ -127,6 +129,24 @@ proj = Rtsne(d)
 plot(proj$Y)
 ```
 
+## A set of genes related to the visual cortex
+
+Tasic et al. (Nature neuro 2016, DOI 10.1038/nn.4216)
+describe single cell analysis of the adult murine
+brain, identify clusters of cells with distinct
+transcriptional profiles and anatomic location,
+and enumerate lists of genes that discriminate
+these clusters.  The tasicST6 DataFrame provides
+details.
+
+```{r lktas}
+data(tasicST6)
+tasicST6
+```
+
+Key high-level discrimination concerns cells regarded as
+GABAergic vs. glutamatergic (inhibitory vs excitatory
+neurotransmission).
 
 
    
