updating README.md with link to vignette content
Former-commit-id: 2e24ecec8c80d1212929d9f715f1e4994912b353 [formerly 2e24ecec8c80d1212929d9f715f1e4994912b353 [formerly 2e24ecec8c80d1212929d9f715f1e4994912b353 [formerly 1f8a63a83c82e931ecf909a5945cb2c091a0d7b5]]] [formerly 4bb72eab12b96450a830ed00d2d77988a385161d [formerly c84485eb499f4a52fd8abd1baa859ceee83cd272] [formerly 44f6bf5d4b349a6e22837cabfd7c05e5a9d5fa18 [formerly 4a75ba13dee77031a1cc0100049df345e9f2efd5]] [formerly 87eadf05474aab915b621dd3696b12f3cb28d467 [formerly f9ccf0d9da1c78c14800b67771f976f25196eb59] [formerly 26b5c9cbfdc310da9a601221dcb37e9f3b0e0afe [formerly 2afdf0afe501aec99ffbb0164e9ee7718e438cfe]]] [formerly fcb9be4d71b4b02f2729e04926b3f6276c0cde30] [formerly d322afba0909effa69f1585df52219c3dc3f8b52 [formerly 50e05aacadf49a311d986eb2ce8089328fb3e2da]] [formerly 446d3a6f8e027d17827bb4a70515be1c84bd4b9b [formerly 966b16c1729ec672e595fefa3cf3f73f5ff28fff] [formerly 41db648a1452fd7497b528e031ebcb0c53dee84d [formerly b781aa38768eba8cca127bd72c955499b1c0d16a]]] [formerly cbf3da425c64d410e97460ba4810e76abb16012d] [formerly 1f20e6d715cf4bf4254f28e521f784145ec888b8 [formerly 5312be082b9f1d72bb978dc5f33cce593d6f2399] [formerly 565aa72466bffbebcc54ff0134a6d64de24d28e5 [formerly 510ab5d9a0416b0cabb28a5a4dda61ceb9e253c7]] [formerly 5fec0daa57fa033ba90e8303aad378ec5f09b2ab [formerly 08c420425e6e9d651dd145bfd2261f75d4886264] [formerly cdfe29cc923aa110cb260909bc040d337e961762]] [formerly cdfe29cc923aa110cb260909bc040d337e961762 [formerly 268878d33f1d3494f7b3d8e724d066fe8750250e]] [formerly 1f20e6d715cf4bf4254f28e521f784145ec888b8 [formerly 5312be082b9f1d72bb978dc5f33cce593d6f2399] [formerly 565aa72466bffbebcc54ff0134a6d64de24d28e5 [formerly 510ab5d9a0416b0cabb28a5a4dda61ceb9e253c7]] [formerly 5fec0daa57fa033ba90e8303aad378ec5f09b2ab [formerly 08c420425e6e9d651dd145bfd2261f75d4886264] [formerly cdfe29cc923aa110cb260909bc040d337e961762]] [formerly cdfe29cc923aa110cb260909bc040d337e961762 [formerly 268878d33f1d34

--- a/vignettes/restfulSE.Rmd
+++ b/vignettes/restfulSE.Rmd
@@ -17,7 +17,27 @@ output:
     toc: yes
 ---
 
-# Introduction
+# restfulSE
+
+This R package includes proof-of-concept code illustrating several approaches to SummarizedExperiment design with
+assays stored out-of-memory.
+
+## HDF5 server backed SummarizedExperiment
+
+[HDF Server](https://support.hdfgroup.org/projects/hdfserver/) "extends the HDF5 data model to efficiently store large data objects (e.g. up to multi-TB data arrays) and access them over the web using a RESTful API."  In this `restfulSE` package,
+several data structures are introduced 
+
+- to model the server data architecture and 
+- to perform targeted extraction of numerical data from HDF5 arrays stored on the server. 
+
+We maintain, thanks to a grant from the National Cancer Institute,
+the server [http://54.174.163.77:5000/](http://54.174.163.77:5000/).  Visit this URL to get a flavor of the
+server structure: datasets, groups, and datatypes are high-level elements to be manipulated to work
+with data values from the server.
+
+# Some details
+
+## Motivation
 
 Extensive human and computational effort is expended on
 downloading and managing large genomic data at site of analysis.
@@ -32,7 +52,7 @@ for interactive use.
 A modest server configured to deliver HDF5 content via a
 RESTful API has been prepared and is used in this vignette.
 
-# Executive summary
+## Executive summary
 
 We want to provide rapid access to array-like data.  We'll work
 with the Banovich 450k data as there is a simple check against
@@ -76,9 +96,9 @@ rbanoSub = rbano[5:8, c(3:9, 40:50)]
 assay(rbanoSub) 
 ```
 
-# 10xGenomics examples
+## 10xGenomics examples
 
-## t-SNE for a set of genes annotated to hippocampus
+### t-SNE for a set of genes annotated to hippocampus
 
 We have used Martin Morgan's TENxGenomics package
 to create a dense HDF5 representation of the 
@@ -129,7 +149,7 @@ proj = Rtsne(d)
 plot(proj$Y)
 ```
 
-## A set of genes related to the visual cortex
+### A set of genes related to the visual cortex
 
 Tasic et al. (Nature neuro 2016, DOI 10.1038/nn.4216)
 describe single cell analysis of the adult murine
@@ -151,7 +171,7 @@ neurotransmission).
 
    
 
-# Background
+## Background
 
 Banovich et al. published a subset of DNA methylation measures
 assembled on 64 samples of immortalized B-cells from the YRI HapMap cohort.
@@ -169,9 +189,9 @@ component is simply copied into the server data space
 on the remote server.  
 
 
-# Hierarchy of server resources
+## Hierarchy of server resources
 
-## Server
+### Server
 
 Given the URL of a server running HDF5 server, we create
 an instance of `H5S_source`:
@@ -180,7 +200,7 @@ mys = H5S_source(serverURL="http://54.174.163.77:5000")
 mys
 ```
 
-## Groups
+### Groups
 
 The server identifies a collection of 'groups'.  For the server
 we are working with, only one group, at the root, is of interest.
@@ -188,7 +208,7 @@ we are working with, only one group, at the root, is of interest.
 groups(mys)
 ```
 
-## Links for a group
+### Links for a group
 
 There is a class to hold the link set for any group:
 ```{r lkhl}
