--- a/vignettes/restfulSE.Rmd
+++ b/vignettes/restfulSE.Rmd
@@ -16,6 +16,14 @@ output:
     theme: united
     toc: yes
 ---
+```{r setup,echo=FALSE,results="hide"}
+suppressPackageStartupMessages({
+library(restfulSE)
+library(GO.db)
+library(org.Hs.eg.db)
+library(SummarizedExperiment)
+})
+```
 
 # restfulSE
 
@@ -34,6 +42,85 @@ We maintain, thanks to a grant from the National Cancer Institute,
 the server [http://54.174.163.77:5000/](http://54.174.163.77:5000/).  Visit this URL to get a flavor of the
 server structure: datasets, groups, and datatypes are high-level elements to be manipulated to work
 with data values from the server.
+
+### Illustration with 10x genomics 1.3 million neurons
+
+We used Martin Morgan's [TENxGenomics](https://github.com/mtmorgan/TENxGenomics) package to transform the sparse-formatted HDF5 supplied by 10x into a
+dense HDF5 matrix to support natural slicing.  Thanks to native compression
+in HDF5, the data volume expansion is modest.
+
+A helper function in the restfulSE package creates a `RESTfulSummarizedExperiment` instance that points to the full numerical dataset.
+```{r do10x,eval=FALSE}
+library(restfulSE)
+my10x = se1.3M()
+my10x
+```
+```
+class: RESTfulSummarizedExperiment 
+dim: 27998 1306127 
+metadata(0):
+assays(1): (served by HDF5Server)
+rownames(27998): ENSMUSG00000051951 ENSMUSG00000089699 ...
+  ENSMUSG00000096730 ENSMUSG00000095742
+rowData names(2): geneid symbol
+colnames(1306127): AAACCTGAGATAGGAG-1 AAACCTGAGCGGCTTC-1 ...
+  TTTGTCAGTTAAAGTG-133 TTTGTCATCTGAAAGA-133
+colData names(4): Barcode Sequence Library Mouse
+```
+
+As an exercise, we acquire the ENSEMBL identifiers for mouse genes annotated to
+hippocampus development, which has GO ID GO:0021766, and check counts
+for 10 genes on 6 samples:
+```{r doanno, eval=FALSE}
+library(org.Mm.eg.db)
+hippdev = select(org.Mm.eg.db, 
+    keys="GO:0021766", keytype="GO", column="ENSEMBL")$ENSEMBL
+hippdev = intersect(hippdev, rownames(my10x))
+unname(assay(my10x[ hippdev[1:10], 10001:10006]))
+```
+The result:
+```
+      [,1] [,2] [,3] [,4] [,5] [,6]
+ [1,]    0    0    0    0    0    0
+ [2,]    0    0    0    0    0    0
+ [3,]    0    0    0    1    0    0
+ [4,]    0    1    2    6    5    0
+ [5,]    0    0    0    0    0    0
+ [6,]    1    2    4    8    7    3
+ [7,]    0    0    0    0    0    0
+ [8,]    0    0    0    0    0    2
+ [9,]    0    0    0    0    0    0
+[10,]    3    0    3    0    1    9
+```
+
+### Illustration with GTEx tissue expression
+
+We exported the content of the [recount2 GTEx
+gene-level quantifications](http://duffel.rail.bio/recount/SRP012682/rse_gene.Rdata) to our HDF5 server.  A convenience function is
+available:
+```{r lktiss, eval=TRUE}
+tiss = gtexTiss()
+tiss
+```
+
+We'll use this remote data as a tool
+for investigating transcriptional patterns in brain anatomy.
+We can identify the samples from brain using the 'smtsd'
+colData element:
+
+```{r findbr}
+binds = grep("Brain", tiss$smtsd)
+table(tiss$smtsd[binds][1:100]) # check diversity in 100 samples
+```
+
+We'll identify genes annotated to neurotrophic functions
+using another convenience function in this package:
+```{r findn}
+ntgenes = goPatt(termPattern="neurotroph")
+head(ntgenes)
+```
+
+
 
 # Some details
 
@@ -58,7 +145,7 @@ We want to provide rapid access to array-like data.  We'll work
 with the Banovich 450k data as there is a simple check against
 an in-memory representation.
 
-```{r setup,echo=FALSE}
+```{r setup2,echo=FALSE}
 suppressPackageStartupMessages({
 library(restfulSE)
 library(SummarizedExperiment)
