--- a/vignettes/restfulSE.Rmd
+++ b/vignettes/restfulSE.Rmd
@@ -22,6 +22,8 @@ library(restfulSE)
 library(GO.db)
 library(org.Hs.eg.db)
 library(SummarizedExperiment)
+library(ExperimentHub)
+library(AnnotationHub)
 })
 ```
 
@@ -172,7 +174,10 @@ banref
 We build a RESTfulSummarizedExperiment by combining an assay-free
 RangedSummarizedExperiment with this reference.
 ```{r doba3}
-data("banoSEMeta", package = "restfulSEData")
+ehub = ExperimentHub::ExperimentHub()
+myfiles <- AnnotationHub::query(ehub , "restfulSEData")
+myfiles[["EH551"]] -> banoSEMeta
+#data("banoSEMeta", package = "restfulSEData")
 rbano = RESTfulSummarizedExperiment(banoSEMeta, banref)
 rbano
 ```
@@ -201,7 +206,10 @@ are sorted by genomic address within chromosomes.
 
 ```{r gettx}
 txdat = bigec2[["tenx_100k_sorted"]]
-data("st100k", package = "restfulSEData")
+ehub = ExperimentHub::ExperimentHub()
+myfiles <- AnnotationHub::query(ehub , "restfulSEData")
+myfiles[["EH552"]] -> st100k
+#data("st100k", package = "restfulSEData")
 tenx100k = RESTfulSummarizedExperiment( st100k, 
    txdat )
 tenx100k
@@ -250,7 +258,10 @@ these clusters.  The tasicST6 DataFrame provides
 details.
 
 ```{r lktas}
-data("tasicST6", package = "restfulSEData")
+#data("tasicST6", package = "restfulSEData")
+ehub = ExperimentHub::ExperimentHub()
+myfiles <- AnnotationHub::query(ehub , "restfulSEData")
+myfiles[["EH557"]] -> tasicST6
 tasicST6
 ```
 
@@ -268,7 +279,10 @@ assembled on 64 samples of immortalized B-cells from the YRI HapMap cohort.
 
 ```{r lkd}
 library(restfulSE)
-data("banoSEMeta", package = "restfulSEData")
+#data("banoSEMeta", package = "restfulSEData")
+ehub = ExperimentHub::ExperimentHub()
+myfiles <- AnnotationHub::query(ehub , "restfulSEData")
+myfiles[["EH551"]] -> banoSEMeta
 banoSEMeta
 ```
 
