--- a/vignettes/restfulSE.Rmd
+++ b/vignettes/restfulSE.Rmd
@@ -41,7 +41,7 @@ several data structures are introduced
 - to perform targeted extraction of numerical data from HDF5 arrays stored on the server. 
 
 We maintain, thanks to a grant from the National Cancer Institute,
-the server [http://54.174.163.77:5000/](http://54.174.163.77:5000/).  Visit this URL to get a flavor of the
+the server [http://h5s.channingremotedata.org:5000/](http://h5s.channingremotedata.org:5000/).  Visit this URL to get a flavor of the
 server structure: datasets, groups, and datatypes are high-level elements to be manipulated to work
 with data values from the server.
 
@@ -158,7 +158,7 @@ library(rhdf5client)
 
 ```{r dobanoyy}
 library(restfulSE)
-bigec2 = H5S_source("http://54.174.163.77:5000")
+bigec2 = H5S_source("http://h5s.channingremotedata.org:5000")
 bigec2
 dsmeta(bigec2)[1:2,] # two groups
 dsmeta(bigec2)[1,2][[1]] # all dataset candidates in group 1
@@ -300,7 +300,7 @@ on the remote server.
 Given the URL of a server running HDF5 server, we create
 an instance of `H5S_source`:
 ```{r doso}
-mys = H5S_source(serverURL="http://54.174.163.77:5000")
+mys = H5S_source(serverURL="http://h5s.channingremotedata.org:5000")
 mys
 ```
 
