updating access to EH resources
Former-commit-id: 1e7181c1819a8d3bfe30b61ab21a3d7724cf7268 [formerly ba8df3ac6ca17591a0a2ace781eb89260fd01c5c] [formerly 5e4c921581edcca0647affe100811829f049b4ab [formerly 2a1baea7eec290a22a58311c4c2ba2f5bdad3a0c]]
Former-commit-id: 47166b8a186d208267cbbdbfee57815f3017c148 [formerly 463c0be9cfdd620351c44c019eda2a9c75c5f2c7]
Former-commit-id: 964816aa3815d8dd0663cd6985e33b46aa4927ea
Former-commit-id: 151d123401a720b03734ad2c1637174e7c0c9e32 [formerly 370dd897c43db049f2bb0a865762a430da0ef2ae] [formerly 0d6e0d8a6d53893d0d4d43c81d69217e5303e07b [formerly 03ec3f10aeed4a47a38da05016f249f223a2ea9b]]
Former-commit-id: af44a975e5de0ffdb83c8795baa7329b19f6f7d9 [formerly cdc0b7b2b0955ee0b2a4dea250b2c89c0cf4ff4a]
Former-commit-id: a45b199e913680fa65efbfd06754a1825dda1641
Former-commit-id: b8304a2c7acc35ef86063114087bd5e660e9877c [formerly 1c082203cfc4d32d82b44ddedd642f9b9f8ef2ee] [formerly 4717bf6e9a1eccc1881be959ebcb925b67e24c3b [formerly 72d018a7829b580201fa3f739d7858232611dd6b]]
Former-commit-id: 47e638de5edfa2810d3cc72a3f0c1a447ca517b9 [formerly 90e88f88413cecbe0f5c143e6b309be6d7408644]
Former-commit-id: ff2f61de76e00c6c12af8fa74c66bcc7fe785a0b
Former-commit-id: 2df20ea69ed3adbc126260bd474817efe1e2a0dd [formerly 378cc9b25f309fa9257b89b936264d35d4c35811] [formerly faab78aeff0560779cfbcb5ca4a00f78730afc17 [formerly 80bb2f7a74c0f40d06222ec24393fd817c57ed7b]]
Former-commit-id: 8c6c5cff467a803cb730dcd220739ee37f35d504 [formerly b10abe5091d51e16e89d6744eb7683566de8933d]
Former-commit-id: 5bd2b385a104fc76bedb73d2a02454c8adec5b30

--- a/vignettes/restfulSE.Rmd
+++ b/vignettes/restfulSE.Rmd
@@ -163,8 +163,8 @@ We build a SummarizedExperiment by combining an assay-free
 RangedSummarizedExperiment with this reference.
 ```{r doba3}
 ehub = ExperimentHub::ExperimentHub()
-myfiles <- AnnotationHub::query(ehub , "restfulSEData")
-banoSE = myfiles[["EH551"]] # no assay data
+tag = names(AnnotationHub::query(ehub, "banoSEMeta"))
+banoSE = ehub[[tag[1]]]
 ds = H5S_Array("http://h5s.channingremotedata.org:5000", "assays")
 assays(banoSE) = SimpleList(betas=ds)
 banoSE
@@ -242,8 +242,8 @@ details.
 ```{r lktas}
 #data("tasicST6", package = "restfulSEData")
 ehub = ExperimentHub::ExperimentHub()
-myfiles <- AnnotationHub::query(ehub , "restfulSEData")
-myfiles[["EH557"]] -> tasicST6
+tag = names(AnnotationHub::query(ehub, "tasicST6"))
+tasicST6 = ehub[[tag[1]]]
 tasicST6
 ```
 
@@ -263,8 +263,8 @@ assembled on 64 samples of immortalized B-cells from the YRI HapMap cohort.
 library(restfulSE)
 #data("banoSEMeta", package = "restfulSEData")
 ehub = ExperimentHub::ExperimentHub()
-myfiles <- AnnotationHub::query(ehub , "restfulSEData")
-myfiles[["EH551"]] -> banoSEMeta
+tag = names(AnnotationHub::query(ehub, "banoSEMeta"))
+banoSEMeta = ehub[[tag[1]]]
 banoSEMeta
 ```
 
