modifying code in demos.R and vignettes. version bump 1.3.17
Former-commit-id: d4750a6d5b76164932f4026cb897f71b0c513300 [formerly d4750a6d5b76164932f4026cb897f71b0c513300 [formerly 1291d982435ce81131728132203342686eb5ae69]] [formerly 4ea79f5b55c358f128618b41cdfff48301be72a2 [formerly 13c26e6b88ae6c4506ec514d69d2167bbeef9f3e] [formerly d7dfdae14ceb8da641a38c5a6e77530e83baa795 [formerly 834b73c3cd511cdf8f33723edc5a2dbac17ea5cf] [formerly 32bb1a081b8ebc7f0d5a5c5a888c3ed846b26aa3 [formerly e8b0dcf9d04ad1d737b2ea64e05fab9cafeda86b]] [formerly 7ffd962e7d81a60a8d13b3471d174675a4fe0ead [formerly 7e0ee39a0fe5782abe0217d1a25579abd4b94926] [formerly a2bab745b0397b4a39cd8d26cc27880a78c8ee8b [formerly 058c58220d46632b77bab13486db91f739e05706]]] [formerly 4806076dce1ec26ba3cbf431931be7f16e2457b9] [formerly cdc23ce54769005af781ec131c847ff37c0a4fe1 [formerly 13052e91d252ba6a3bb9484110065121607263f4]] [formerly 47ae462e36c48b2bbd9e1c441dceb1debae44f57 [formerly f5b3f8f73885d539ae527936bb2181f504b86a9a] [formerly 71521d30d875f0e300856434c2f390b367d950ba [formerly 853c236efd7fd7ee754ab26b155623d4dba3e7a2]]] [formerly 586ee18d550f7abc70250eda0c20526485d28a61] [formerly 4458e1815d81756b0da15e5ff8e6b95429778917 [formerly 77bc13f0ab3f52d544aae653142587ae54ad861b] [formerly 4458e1815d81756b0da15e5ff8e6b95429778917 [formerly 77bc13f0ab3f52d544aae653142587ae54ad861b] [formerly 586ee18d550f7abc70250eda0c20526485d28a61 [formerly fee4a652b3367d2b298f4a5676a1e06d96f24eee]]]] [formerly 4ea79f5b55c358f128618b41cdfff48301be72a2 [formerly 13c26e6b88ae6c4506ec514d69d2167bbeef9f3e] [formerly d4750a6d5b76164932f4026cb897f71b0c513300 [formerly 1291d982435ce81131728132203342686eb5ae69] [formerly 4458e1815d81756b0da15e5ff8e6b95429778917 [formerly 77bc13f0ab3f52d544aae653142587ae54ad861b] [formerly 586ee18d550f7abc70250eda0c20526485d28a61 [formerly fee4a652b3367d2b298f4a5676a1e06d96f24eee]] [formerly d4750a6d5b76164932f4026cb897f71b0c513300 [formerly 1291d982435ce81131728132203342686eb5ae69] [formerly 13c2

--- a/vignettes/restfulSE.Rmd
+++ b/vignettes/restfulSE.Rmd
@@ -165,7 +165,8 @@ RangedSummarizedExperiment with this reference.
 ehub = ExperimentHub::ExperimentHub()
 tag = names(AnnotationHub::query(ehub, "banoSEMeta"))
 banoSE = ehub[[tag[1]]]
-ds = H5S_Array("http://h5s.channingremotedata.org:5000", "assays")
+#ds = H5S_Array("http://h5s.channingremotedata.org:5000", "assays")
+ds = H5S_Array("http://h5s.channingremotedata.org:5000", "", "assays")
 assays(banoSE) = SimpleList(betas=ds)
 banoSE
 ```
