modifying vignette, version bump 1.3.23
Former-commit-id: b9210ca27c1cb2c3eb6f4e49b634f32576316016 [formerly 034803612b216dae45894a2faa5d0ccde3eefaa8 [formerly c5cf36e6ae72cbb4b154e0d266ac6db82da9caa2]] [formerly 3c88a20a1d5ac90beb121c6dffbc40f0a5d5776b [formerly 65c395514e406e086fb8d9bf793f98662b046a83] [formerly 62a2f8ced09b3897c9658bf398b6ff1c17e27fb8 [formerly e2a0b0cab9d719efc3a8cd54994fc7138bc2ee59]] [formerly 3c88a20a1d5ac90beb121c6dffbc40f0a5d5776b [formerly 65c395514e406e086fb8d9bf793f98662b046a83] [formerly 62a2f8ced09b3897c9658bf398b6ff1c17e27fb8 [formerly e2a0b0cab9d719efc3a8cd54994fc7138bc2ee59]] [formerly 034803612b216dae45894a2faa5d0ccde3eefaa8 [formerly c5cf36e6ae72cbb4b154e0d266ac6db82da9caa2] [formerly bcdd14a7ad9d8680d30dee24bf04de4c644153c9 [formerly d1259f8b01d4da7f570da75d4443b52b9cca7abf]]]]]
Former-commit-id: 304a22b8c51e0e83d0b5bf371ece10fcadc189b4 [formerly bcdd14a7ad9d8680d30dee24bf04de4c644153c9]
Former-commit-id: 2827519d5f565a350e480d21d7417b6ea590b0e0
Former-commit-id: 539b4dcccbc9b1ba1b984c553c39fb713e7610aa [formerly fc28ebfc71829462f0f006e783e898ca7ea693f6] [formerly 728f934b4b546fc4489d29699b735eae0c156a22 [formerly f3ef8b654b5024d9ba90c67bf1ebcc73e4dcaa69]]
Former-commit-id: 31a5b2f0f88ec13ace82dc5e9119cb38f59294c9 [formerly e32f25743ba66785a98c1b6fe01e3e8b915e2f56]
Former-commit-id: b4f440ddb715a38559e341ba60378535c39e5b16

--- a/vignettes/restfulSE.Rmd
+++ b/vignettes/restfulSE.Rmd
@@ -40,10 +40,7 @@ several data structures are introduced
 - to model the server data architecture and 
 - to perform targeted extraction of numerical data from HDF5 arrays stored on the server. 
 
-We maintain, thanks to a grant from the National Cancer Institute,
-the server [http://h5s.channingremotedata.org:5000/](http://h5s.channingremotedata.org:5000/).  Visit this URL to get a flavor of the
-server structure: datasets, groups, and datatypes are high-level elements to be manipulated to work
-with data values from the server.
+We work with HDF Object store (https://www.hdfgroup.org/solutions/hdf-cloud/). 
 
 ### Illustration with 10x genomics 1.3 million neurons
 
